A more sensible approach to sizing the "colour-fonts"  - the CWORD svg's are now drawn at fixed size (internally) and scaled up. This is by keeping "svg viewBox" coordinate-system scale fixed, but varying "svg width/height" scale.  - spacing between colour-words is handled by adding right-padding to the svgs, rather than 'space' characters in the HTML.  - div for the 'colour-word' svg's has a little bit of extra space to the right, helping with spacing between words.

--- a/public/css/CTRA_App.css
+++ b/public/css/CTRA_App.css
@@ -101,4 +101,6 @@ textarea{
 
 .colour-type{
     padding-top: 1.5em;
+    position: absolute;
+    width: 102.1%;
 }
